/*
 * $Id: ChangeLog,v 1.47 2005-11-18 03:49:04 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-11-17 21:47 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/oohg.h
  * source/c_controlmisc.c
  * source/c_grid.c
  * source/h_browse.prg
  * source/h_controlmisc.prg
  * source/h_grid.prg
  * source/h_progressbar.prg
  * source/h_progressmeter.prg
  * source/h_richeditbox.prg
  * source/h_slider.prg
  * source/h_windows.prg
    * ::aFontColor, ::aBackColor, ::BrushHandle properties moved to
      C level.

  * source/h_combo.prg
    * Font/back colors fixed.
    * Font/back colors for selected item added.

2005-11-16 23:04 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/oohg.h
  * source/c_combo.c
  * source/c_controlmisc.c
  * source/h_combo.prg
  * source/h_controlmisc.prg
  * source/h_grid.prg
  * source/h_windows.prg
    + ::Events_DrawItem() method added.
    + ::Release() method for TWindow class added.
    * ::ImageList property moved to C level structure.
    * Combobox is again "COMBOBOX" window instead of "ComboBoxEx32".
      Image processing is managed via WM_DRAWITEM event.
    * A few methods moved to C level.

  * source/h_textbox.prg
    * commctrl.h include file added.

2005-11-15 23:52 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
    * Assigns ::hWnd := -1 when control is released.

2005-11-15 23:43 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/oohg.h
  * source/c_combo.c
  * source/c_controlmisc.c
  * source/h_combo.prg
  * source/h_controlmisc.prg
  * source/h_windows.prg
    + ::aControlInfo property added. It contains window/control info for
      access it at C level.
    * A few methods moved to C level.

2005-11-12 18:07 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_tooltip.ch